--- a/goog.html
+++ b/goog.html
@@ -3,6 +3,19 @@
 <!--  Last Published: Sat Apr 06 2019 07:53:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5ca43c99232cdd8c87912eb4" data-wf-site="5c68f6f180da2a5c476c837e">
 <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137895463-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-137895463-1');
+    </script>
+
+
+
   <meta charset="utf-8">
   <title>goog</title>
   <meta content="goog" property="og:title">
