--- a/snapchat.html
+++ b/snapchat.html
@@ -3,6 +3,18 @@
 <!--  Last Published: Sat Apr 06 2019 07:53:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5c9da2c4b44d1421e2b31d22" data-wf-site="5c68f6f180da2a5c476c837e">
 <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137895463-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-137895463-1');
+    </script>
+
+    
   <meta charset="utf-8">
   <title>Snapchat new</title>
   <meta content="Snapchat new" property="og:title">
