--- a/coming-soon.html
+++ b/coming-soon.html
@@ -14,7 +14,7 @@
       gtag('config', 'UA-137895463-1');
     </script>
 
-    
+
   <meta charset="utf-8">
   <title>movie stubs</title>
   <meta content="movie stubs" property="og:title">
@@ -25,8 +25,7 @@
   <link href="css/lucy-xu.webflow.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+<link href="images/fav.png" rel="shortcut icon" type="image/x-icon">  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
   <div class="div-block-2"></div>
