--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 </head>
 <body class="body-copy">
   <div class="w-layout-grid grid-3a">
-    <div id="w-node-4dd13f02c592-3b26933f" class="linskksksk"><a href="#" class="holds-links">resume</a></div>
+    <div id="w-node-4dd13f02c592-3b26933f" class="linskksksk"><a href="images/Xu_Lucy_Resume.pdf" class="holds-links">resume</a></div>
     <div id="w-node-84a2d29e0e9f-3b26933f" class="linskksksk activee"><a href="/" class="holds-links">home</a></div>
     <div id="w-node-7b74f11cf3cf-3b26933f" class="linskksksk _2"><a href="https://lucylouxu.com/about" class="holds-links active w--current">about</a></div>
     <h1 id="w-node-ee939eee215d-3b26933f" class="cactus">🌱</h1>
