--- a/snapchat.html
+++ b/snapchat.html
@@ -34,7 +34,7 @@
   </a><img src="images/coverpage_lucy.jpg" srcset="images/coverpage_lucy-p-500.jpeg 500w, images/coverpage_lucy-p-800.jpeg 800w, images/coverpage_lucy-p-1600.jpeg 1600w, images/coverpage_lucy-p-2000.jpeg 2000w, images/coverpage_lucy-p-2600.jpeg 2600w, images/coverpage_lucy.jpg 2904w" sizes="(max-width: 2904px) 100vw, 2904px" alt="" class="headerimage">
   <p class="paragraph-3"><strong class="bold-text">— product design</strong></p>
   <p class="writeuptitle">Rethinking Snapchat&#x27;s Discover Page</p>
-  <p class="paragraph-3">Fall 2018<br><strong>Role: </strong>Visual Designer<strong><br>Collaborators: </strong>Anna Hazarian, Ben Hazarian, Jan Eric De Castro, Will Wong <br><strong>Final Result:</strong> http://bit.ly/187Snapchat</p>
+  <p class="paragraph-3">Fall 2018<br><strong>Role: </strong>Visual Designer<strong><br>Collaborators: </strong>Anna Hazarian, Ben Hazarian, Jan Eric De Castro, Will Wong <br><strong>Final Result:</strong> <a href="http://bit.ly/187Snapchat">http://bit.ly/187Snapchat</a></p>
   <h1 class="writeuphead">Overview</h1>
   <p class="paragraph-3">My group and I redesigned Snapchat’s display of “stories” on the Discover page. I will be elaborating on my design, one out of the two, that was created using our group’s user research data.<br></p>
   <div class="casestudypix"><img src="images/pic1_1.png" srcset="images/pic1_1-p-500.png 500w, images/pic1_1-p-800.png 800w, images/pic1_1.png 978w" sizes="100vw" alt=""></div>
