--- a/soundcloud.html
+++ b/soundcloud.html
@@ -35,7 +35,7 @@
   <img src="images/soundcloud.jpg" srcset="images/soundcloud-p-500.jpeg 500w, images/soundcloud-p-800.jpeg 800w, images/soundcloud-p-1600.jpeg 1600w, images/soundcloud-p-2000.jpeg 2000w, images/soundcloud-p-2600.jpeg 2600w, images/soundcloud.jpg 2904w" sizes="(max-width: 2904px) 100vw, 2904px" alt="" class="headerimage">
   <p class="paragraph-3"><strong class="bold-text sc">— product design</strong></p>
   <p class="writeuptitle">Reimagination of the SoundCloud Music Player</p>
-  <p class="paragraph-3">Winter 2019<br><strong>Final Result:</strong> bit.ly/SoundCloud_LX</p>
+  <p class="paragraph-3">Winter 2019<br><strong>Final Result:</strong> <a href="https://bit.ly/SoundCloud_LX">https://bit.ly/SoundCloud_LX</a></p>
   <h1 class="writeuphead">Overview</h1>
   <p class="paragraph-3">For the KPCB Design Challenge, I decided to design the music player feature on SoundCloud’s mobile app. Below is a side by side comparison of the SoundCloud Android UI currently (on the left) and my redesign (on the right).<br><br>Below is a side by side comparison of the SoundCloud Android UI currently (on the left) and my redesign (on the right).</p>
   <div class="casestudypix"><img src="images/pic1.png" srcset="images/pic1-p-500.png 500w, images/pic1-p-800.png 800w, images/pic1.png 922w" sizes="100vw" alt=""></div>
