--- a/illustrations.html
+++ b/illustrations.html
@@ -52,7 +52,9 @@
     <div class="w-col w-col-6"><img src="images/stupid-06.png" srcset="images/stupid-06-p-500.png 500w, images/stupid-06-p-800.png 800w, images/stupid-06-p-1080.png 1080w, images/stupid-06-p-1600.png 1600w, images/stupid-06-p-2000.png 2000w, images/stupid-06.png 2914w" sizes="100vw" alt="">
       <p class="galcap">Space_1.jpg — &quot;look how they shine for you&quot;</p>
     </div>
-    <div class="w-col w-col-6"></div>
+    <div class="w-col w-col-6"><img src="images/stride.gif" alt="">
+      <p class="galcap">stride.gif — career fair fun</p>
+    </div>
   </div>
 
   <div class="galcon"><img src="images/SYNC-01.jpg" srcset="images/SYNC-01-p-500.jpeg 500w, images/SYNC-01-p-800.jpeg 800w, images/SYNC-01-p-1080.jpeg 1080w, images/SYNC-01-p-3200.jpeg 3200w, images/SYNC-01.jpg 6825w" sizes="100vw" alt=""><img src="images/DSC_0617web.jpg" srcset="images/DSC_0617web-p-500.jpeg 500w, images/DSC_0617web-p-1080.jpeg 1080w, images/DSC_0617web-p-1600.jpeg 1600w, images/DSC_0617web-p-2000.jpeg 2000w, images/DSC_0617web-p-2600.jpeg 2600w, images/DSC_0617web-p-3200.jpeg 3200w, images/DSC_0617web.jpg 6000w" sizes="100vw" alt="" class="image-15">
