--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1 id="w-node-ee939eee215d-456c837f" class="cactus">🌵</h1>
         <h1 id="w-node-9bde8af865d3-456c837f" class="heading">Lucy is a designer of things...</h1>
         <div id="w-node-10d6bd923068-456c837f" class="desc">Studying Design &amp; Interaction. Lead designer at UC San Diego’s <a href="https://universitycenters.ucsd.edu">student union</a>.
-          Design co-chair for UC San Diego’s <a href="https://designatucsd.org">biggest design community</a>. <br></div>
+          Co-Creative Director for UC San Diego’s <a href="https://designatucsd.org">biggest design community</a>. <br></div>
       </div>
     </div>
   </div>
