--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["IBM Plex Mono:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="icons/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="icons/octfavicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="icons/webclip.png" rel="apple-touch-icon">
+
+
+
 </head>
+
+
 <body class="body-3">
   <div class="leftbar w-clearfix"><a href="index.html" class="title w--current">lucy xu</a>
-    <p class="allleftnav"><a href="index.html" class="leftnav w--current">home<br></a><a href="work.html" class="leftnav">work<br></a><a href="about.html" class="leftnav">about<br></a><a href="documents/resume8.pdf" class="leftnav bottom">resume</a></p>
+    <p class="allleftnav"><a href="index.html"
+      class="leftnav w--current"> home<br></a><a href="work.html"
+      class="leftnav">work<br></a><a href="about.html"
+      class="leftnav">about<br></a><a href="documents/resume8.pdf" class="leftnav bottom">resume</a></p>
   </div>
   <div class="right">
     <p class="intro">studying Cognitive Science + lead designer at UC San Diego’s student union + design co-chair for UC San Diego’s biggest design community_<br></p>
