--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Aug 18 2019 01:20:55 GMT+0000 (UTC)  -->
 <html data-wf-page="5d392cd563ba60698820ccb7" data-wf-site="5d37e0cff1f7ed69397756bb">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -38,9 +36,20 @@
   <!-- <div class="outer">
   <div class="middle">
   <div class="inner"> -->
-  <div class="name">lucy xu<span class="blinking-cursor">_</span></div>
+  <!-- <div class="name">lucy xu<span class="blinking-cursor">_</span></div>
 
-  <div class="newintro">hi my site is currently being reconstructed. <a href="indexold.html">click here</a> for my old site!</div>
+  <div class="newintro">hi my site is currently being reconstructed. <a href="indexold.html">click here</a> for my old site!</div> -->
+
+
+
+
+  <a href="/" class="myname">lucy xu</a>
+  <div class="navs"><a href="/work" class="nav">work</a><a href="/about" class="nav">about</a></div>
+
+  <div class="mydescbox">
+    <p class="mydesc">Incoming Visual Designer at ServiceNow.</p>
+  </div>
+  <p class="social">@lucylouxu on most places</p>
 
   <!-- </div>
 </div>
