--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/redesign-cc73cf.webflow.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script type="text/javascript">
+  !function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
+  <!-- test omg -->
+  <div id="all">
+  <div id="container">
+    <div id="animate">
+    </div>
+  </div>
+  </div>
+  <!-- end -->
   <div class="masterdiv w-clearfix">
     <div class="navs w-clearfix"><a href="index.html" class="myname w--current">lucy xu<span class="blinking-cursor">_</span></a></div>
     <div class="w-layout-grid grid">
@@ -27,6 +36,73 @@
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+  <script>
+  var container = document.getElementById('animate');
+var emoji = ['✨'];
+var circles = [];
+
+for (var i = 0; i < 10; i++) {
+  addCircle(i * 4500, [10+0, 900], emoji[Math.floor(Math.random() * emoji.length)]);
+  addCircle(i * 420, [10 + 0, -900], emoji[Math.floor(Math.random() * emoji.length)]);
+  // addCircle(i * 450, [10 - 200, -900], emoji[Math.floor(Math.random() * emoji.length)]);
+  // addCircle(i * 150, [10 + 600, 900], emoji[Math.floor(Math.random() * emoji.length)]);
+  // addCircle(i * 450, [10 - 400, -300], emoji[Math.floor(Math.random() * emoji.length)]);
+  // addCircle(i * 450, [10 + 400, 300], emoji[Math.floor(Math.random() * emoji.length)]);
+  // addCircle(i * 450, [10 - 600, -300], emoji[Math.floor(Math.random() * emoji.length)]);
+  // addCircle(i * 450, [10 + 600, 300], emoji[Math.floor(Math.random() * emoji.length)]);
+}
+
+
+
+function addCircle(delay, range, color) {
+  setTimeout(function() {
+    var c = new Circle(range[0] + Math.random() * range[1], 80 + Math.random() * 4, color, {
+      x: -0.15 + Math.random() * 0.3,
+      y: 1 + Math.random() * 1
+    }, range);
+    circles.push(c);
+  }, delay);
+}
+
+function Circle(x, y, c, v, range) {
+  var _this = this;
+  this.x = x;
+  this.y = y;
+  this.color = c;
+  this.v = v;
+  this.range = range;
+  this.element = document.createElement('span');
+  /*this.element.style.display = 'block';*/
+  this.element.style.opacity = 0;
+  this.element.style.position = 'absolute';
+  this.element.style.fontSize = '20px';
+  this.element.style.color = 'hsl('+(Math.random()*360|0)+',100%,50%)';
+  this.element.innerHTML = c;
+  container.appendChild(this.element);
+
+  this.update = function() {
+    if (_this.y > 800) {
+      _this.y = 80 + Math.random() * 4;
+      _this.x = _this.range[0] + Math.random() * _this.range[1];
+    }
+    _this.y += _this.v.y;
+    _this.x += _this.v.x;
+    this.element.style.opacity = 1;
+    this.element.style.transform = 'translate3d(' + _this.x + 'px, ' + _this.y + 'px, 0px)';
+    this.element.style.webkitTransform = 'translate3d(' + _this.x + 'px, ' + _this.y + 'px, 0px)';
+    this.element.style.mozTransform = 'translate3d(' + _this.x + 'px, ' + _this.y + 'px, 0px)';
+  };
+}
+
+function animate() {
+  for (var i in circles) {
+    circles[i].update();
+  }
+  requestAnimationFrame(animate);
+}
+
+animate();
+</script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
